<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_layout"
    android:tag="main_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragments.ForecastFragment">

    <LinearLayout
        android:id="@+id/tile_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:id="@+id/tile1"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_mon"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/cloudy" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day1"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile2"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_tue"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/rainy"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/day2"
                android:textSize="@dimen/forecast_font_size" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile3"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_wed"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/rainy"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day3"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile4"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_thu"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/storm"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day4"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile5"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_fri"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/cloudy"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day5"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile6"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_sat"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/cloudy"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day6"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile7"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_sun"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/thunder"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day7"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile8"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_mon"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/storm"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/day8"
                android:textSize="@dimen/forecast_font_size" />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile9"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_tue"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/rainy"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day9"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/tile10"
            android:layout_height="@dimen/forecast_tile_height"
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal"
            android:padding="5dp"
            android:background="@color/forecast_tile_color">
            <TextView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:gravity="center"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/forecast_wed"/>
            <ImageView
                android:layout_width="@dimen/forecast_image_width"
                android:layout_height="match_parent"
                android:src="@drawable/storm"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:textSize="@dimen/forecast_font_size"
                android:text="@string/day10"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>